# hawkeye

./: .gitmodules  README.md  package.json  start_job_and_make_payment.sh
agent-expresso/: .env.example  .gitignore  README.md  main.py
agent-expresso/aws_hawk/: .gitignore  README.md  pyproject.toml
agent-expresso/aws_hawk/output/: analyze_s3_bucket_security_task.md  s3_insights_flow.md
agent-expresso/aws_hawk/src/aws_hawk/: adhoc_testing.py  crew.py  entrypoint.py  main.py  s3_insights_flow.py
agent-expresso/aws_hawk/src/aws_hawk/config/: agents.yaml  tasks.yaml
agent-expresso/aws_hawk/src/aws_hawk/crews/AwsCfnHawkCrew/: AwsCfnHawkCrew.py
agent-expresso/aws_hawk/src/aws_hawk/crews/AwsEc2HawkCrew/: AwsEc2HawkCrew.py
agent-expresso/aws_hawk/src/aws_hawk/crews/AwsEc2HawkCrew/config/: agents.yaml  tasks.yaml
agent-expresso/aws_hawk/src/aws_hawk/crews/AwsS3HawkCrew/: AwsS3HawkCrew.py
agent-expresso/aws_hawk/src/aws_hawk/crews/AwsS3HawkCrew/config/: agents.yaml  tasks.yaml
agent-expresso/aws_hawk/src/aws_hawk/flows/: s3_insights_flow.py
agent-expresso/aws_hawk/src/aws_hawk/models/: cfn_agent.py  ec2_agent.py  s3_agent.py
agent-expresso/aws_hawk/src/aws_hawk/tools/: boto3_tool.py
agent-expresso/aws_hawk/src/aws_hawk/utils/: build_prefix_graph.py
hawkeye/: .prettierignore  ABOUT_THE_PROJECT.md  ANALYSIS_ENHANCEMENTS.md  BUCKET_CREATION_FIX.md  CLOUDWATCH_IMPROVEMENTS.md  DATABASE_SETUP.md  FIXES_APPLIED.md  INVENTORY_ANALYSIS.md  LOGO_AND_THEME_IMPROVEMENTS.md  README.md  REPORT_CONSISTENCY.md  THEME_CONSISTENCY_FIXES.md  UI_IMPROVEMENTS.md  test-db.js  (+3 more)
(+113 files in other folders)
